--- a/src/componentes/CardLivros/CardLivros.css
+++ b/src/componentes/CardLivros/CardLivros.css
@@ -1,3 +1,8 @@
+.estante-de-livros {
+    display: flex;
+    justify-content: space-around;
+}
+
 .card-livros {
     display: flex;
     flex-direction: column;
@@ -19,3 +24,4 @@
     width: 200px;
     height: auto;
 }
+
