--- a/src/componentes/CardLivros/CardLivros.css
+++ b/src/componentes/CardLivros/CardLivros.css
@@ -1,7 +1,8 @@
 
 .estante-de-livros {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .card-livros {
@@ -10,6 +11,7 @@
     align-items: center;
     z-index: 5;
     background: rgba(0, 0, 0, 0);
+    margin-right: 30px;
 }
 
 .card-livros:hover {
@@ -26,3 +28,6 @@
     height: auto;
 }
 
+.descricao-espaco {
+    width: 200px;
+}
