--- a/src/componentes/CardLivros/CardLivros.css
+++ b/src/componentes/CardLivros/CardLivros.css
@@ -22,6 +22,9 @@
     color: #996DFF;
     text-transform: uppercase;
     background: rgba(0, 0, 0, 0);
+    font-family: "Nerko One", cursive;
+    font-weight: 800;
+    font-style: normal
 }
 
 .img-card-livro {
